--- a/ampacheWithAnsible/ampache-docker/vars/main.yml
+++ b/ampacheWithAnsible/ampache-docker/vars/main.yml
@@ -1,6 +1,6 @@
 ---
-work_dir: /var/www/ampache
+work_dir: /var/lib/docker/ampache
 # This is a full path of configs on my computer
 files: /home/shanx/DevOps/ansible/AMPACHE/ampache-docker/files/
-musics_work_dir: "{{ work_dir }}/musics"
+musics_work_dir: "/var/lib/docker/volumes/music-streamer_ampache/_data/musics"
 sample: "/home/shanx/Zenek/Music/Tankcsapda-Ha\ zajt\ akartok/"
