--- a/ampacheWithAnsible/playbook.yml
+++ b/ampacheWithAnsible/playbook.yml
@@ -6,17 +6,17 @@
       service: name=apache2 state=stopped
     - name: apt update
       apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
-    # - name: docker install
-    #   apt: name=docker.io state=latest
+    - name: docker install
+      apt: name=docker.io state=latest
     # - name: install pip for python3
     #   apt: name=python3-pip state=absent
     # installing docker-compose with apt went wrong first because of dependencies
-    - name: install pip for installing docker and docker-compose
+    - name: install pip for installing docker-compose
       apt: name=python-pip state=latest
     # python-setup should be already installed
     - name: python-setuptools install
       apt: name=python-setuptools state=latest
-    - name: install docker
+    - name: install docker module
       pip: name=docker state=latest
     # pip must be upgraded before docker-compose will be installed
     - name: pip upgrade
