--- a/ampacheWithAnsible/ampache-docker/tasks/main.yml
+++ b/ampacheWithAnsible/ampache-docker/tasks/main.yml
@@ -24,6 +24,7 @@
       services:
         db:
           image: mariadb:10
+          restart: always
           volumes:
             - "db:/var/lib/mysql"
           environment:
@@ -33,6 +34,7 @@
             MYSQL_PASSWORD: ampache
         web:
           image: music-streamer
+          restart: always
           volumes:
             - "ampache:{{ work_dir }}"
           ports:
