--- a/ampacheWithAnsible/ampache-docker/vars/main.yml
+++ b/ampacheWithAnsible/ampache-docker/vars/main.yml
@@ -1,5 +1,5 @@
 ---
-work_dir: /var/lib/docker/ampache
+work_dir: /var/lib/docker/ampache/files
 # This is a full path of configs on my computer
 files: /home/shanx/DevOps/ansible/AMPACHE/ampache-docker/files/
 musics_work_dir: "/var/lib/docker/volumes/music-streamer_ampache/_data/musics"
